# GRaDOS

./: .gitignore  .mcp.json  ADR.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  README.zh-CN.md  TODO.md  grados-config.example.json  grados-python-implementation-plan.md  mcp-config.example.json  package-lock.json  package.json  plugin.mcp.json  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/workflows/: ci.yml  publish.yml  sync-claude-plugin.yml
GraDos/: package.json
GraDos/src/: index.ts
commands/: setup.md  status.md
hooks/: hooks.json
marker-worker/: install.ps1  install.sh  prewarm.py  runtime_env.py  verify.py  worker.py
plugins/grados/.codex-plugin/: plugin.json
plugins/grados/skills/grados/: SKILL.md
plugins/grados/skills/grados/agents/: openai.yaml
plugins/grados/skills/grados/references/: external_synthesis.md  indepth.md  tools.md
plugins/grados/skills/grados/references/domain_profiles/: mechanics_elastic_metamaterials.md
plugins/grados/skills/grados/references/writing_profiles/: literature_review.md  manuscript.md
scripts/: check_release_publish_guard.py  release.py
skills/GRaDOS/: SKILL.md
skills/GraDOS/: SKILL.md
skills/grados/: SKILL.md
skills/grados/agents/: openai.yaml
skills/grados/references/: external_synthesis.md  indepth.md  paper_writing.md  tools.md
skills/grados/references/writing_profiles/: experiment_report.md  experimental_protocol.md
src/: index.ts  resumable-search.ts
src/grados/: __init__.py  _retry.py  cli.py  config.py  http_limits.py  importing.py  local_files.py  research_checkpoint.py  research_state.py  research_tools.py  secrets.py  server.py  zotero.py
src/grados/browser/: constants.py  fetch_runtime.py  generic.py  lock.py  manager.py  profile.py  sciencedirect.py  session_runtime.py
src/grados/browser/chatgpt/: __init__.py  assistant_response.py  capture.py  composer.py  errors.py  lock.py  login.py  model_selection.py  profile.py  protocol.py  runtime.py  selectors.py  session_store.py  thinking.py  types.py
src/grados/browser/pdf/: __init__.py  session_store.py  types.py
src/grados/browser/strategies/: __init__.py  generic_pdf_click.py
src/grados/client_assets/: __init__.py
src/grados/extract/: fetch.py  parse.py  qa.py
src/grados/integrations/: __init__.py  manager.py
src/grados/publisher/: common.py  elsevier.py  springer.py
src/grados/research/: __init__.py  citation_graph.py  common.py  compare.py  draft_audit.py  evidence_eligibility.py  evidence_grid.py  evidence_pack.py  external_synthesis.py  full_context.py  models.py  pack_audit.py
src/grados/search/: academic.py  resumable.py
src/grados/server_tools/: __init__.py  admin_tools.py  library_tools.py  research_tools_api.py  search_tools.py  shared.py
src/grados/setup/: migration.py
src/grados/storage/: assets.py  canonical_blocks.py  chroma_client.py  chunking.py  corpus.py  embedding.py  frontmatter.py  fts.py  hydration.py  operations.py  papers.py  parse_attempts.py  parsed_sidecar.py  paths.py  remote_metadata.py  retrieval.py  search_pipeline.py  vector.py
src/grados/workflows/: __init__.py  library.py
tests/: LIVE_CHECKS.md  conftest.py  local-contract.mjs  mcp-smoke.mjs  module-test.mjs  search-continuation.mjs  test_browser_smoke.py  test_chatgpt_browser_mode.py  test_cli_smoke.py  test_codex_handoff.py  test_config_smoke.py  test_contract_fixtures.py  test_fetch_smoke.py  test_http_limits.py  test_import_smoke.py  test_library_workflow.py  test_migration.py  test_parse_smoke.py  test_plugin_manifests.py  test_release_publish_guard.py  test_release_script.py  test_remote_metadata_smoke.py  test_research_checkpoint.py  test_research_citation_graph.py  test_research_compare.py  test_research_evidence_audit.py  test_research_evidence_eligibility.py  test_research_evidence_pack.py  test_research_external_synthesis.py  test_research_full_context.py  test_research_smoke.py  test_research_state_smoke.py  test_search_fts.py  test_search_smoke.py  test_secret_smoke.py  test_server_smoke.py  test_storage_smoke.py  test_timeout_retry.py  test_tool_contract_docs.py
